--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="ev0lve avatar generator "
     />
-    <title>ev0lve avatars</title>
+    <title>ev0lve avatar-generator made by bay</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
